[package]
authors     = ["Betelgeuse Network <hello@betelgeuse.network>"]
description = "FRAME to claim airdrop"
edition     = "2018"
homepage    = "https://betelgeuse.network/"
license     = "GPL-3.0"
name        = "betelgeuse-claims"
readme      = "README.md"
repository  = "https://github.com/betelgeuse-network/betelgeuse-common/"
version     = "1.3.0"

[dependencies]
# crates
codec      = { package = "parity-scale-codec", version = "1.3.5", default-features = false, features = ["derive"] }
serde      = { version = "1.0.118", optional = true }
serde_json = { version = "1.0.61", optional = true }
# betelgeuse
array-bytes      = { default-features = false, path = "../../primitives/array-bytes" }
betelgeuse-support = { default-features = false, path = "../support" }
# substrate
frame-support = { default-features = false, git = "https://github.com/new-mvs/substrate.git", branch = "common-library" }
frame-system  = { default-features = false, git = "https://github.com/new-mvs/substrate.git", branch = "common-library" }
sp-io         = { default-features = false, git = "https://github.com/new-mvs/substrate.git", branch = "common-library" }
sp-runtime    = { default-features = false, git = "https://github.com/new-mvs/substrate.git", branch = "common-library" }
sp-std        = { default-features = false, git = "https://github.com/new-mvs/substrate.git", branch = "common-library" }

[dev-dependencies]
# crates
libsecp256k1 = { version = "0.3.5" }
# betelgeuse
betelgeuse-balances = { path = "../balances" }
# substrate
sp-core = { git = "https://github.com/new-mvs/substrate.git", branch = "common-library" }

[features]
default = ["std"]

std = [
	"crates-std",
	"betelgeuse-std",
	"substrate-std",
]

crates-std    = [
	"codec/std",
	"serde",
	"serde_json",
]
betelgeuse-std  = [
	"array-bytes/std",
	"betelgeuse-support/std",
]
substrate-std = [
	"frame-support/std",
	"frame-system/std",
	"sp-io/std",
	"sp-runtime/std",
	"sp-std/std",
]
