[package]
authors     = ["Betelgeuse Network <hello@betelgeuse.network>"]
description = "Ethereum compatibility full block processing emulation pallet for Betelgeuse."
edition     = "2018"
homepage    = "https://betelgeuse.network/"
license     = "GPL-3.0"
name        = "dvm-ethereum"
readme      = "README.md"
repository  = "https://github.com/betelgeuse-network/betelgeuse-common/"
version     = "1.3.0"

[dependencies]
# crates
codec          = { package = "parity-scale-codec", version = "1.3.5", default-features = false }
ethereum       = { version = "0.5", default-features = false, features = ["with-codec"] }
ethereum-types = { version = "0.9", default-features = false }
evm            = { version = "0.19.0", features = ["with-codec"], default-features = false }
libsecp256k1   = { version = "0.3", default-features = false }
rlp            = { version = "0.4", default-features = false }
rustc-hex      = { version = "2.1.0", default-features = false }
serde          = { version = "1.0.118", optional = true }
sha3           = { version = "0.8", default-features = false }
# betelgeuse
betelgeuse-balances        = { default-features = false, path = "../balances" }
betelgeuse-evm             = { default-features = false, path = "../evm" }
betelgeuse-evm-primitives  = { default-features = false, path = "../../primitives/evm" }
betelgeuse-support         = { default-features = false, path = "../support" }
dvm-consensus-primitives = { default-features = false, path = "../../primitives/consensus" }
dvm-rpc-runtime-api      = { default-features = false, path = "./rpc/runtime-api" }
# substrate
frame-support    = { default-features = false, git = "https://github.com/new-mvs/substrate.git", branch = "common-library" }
frame-system     = { default-features = false, git = "https://github.com/new-mvs/substrate.git", branch = "common-library" }
pallet-timestamp = { default-features = false, git = "https://github.com/new-mvs/substrate.git", branch = "common-library" }
sp-core          = { default-features = false, git = "https://github.com/new-mvs/substrate.git", branch = "common-library" }
sp-io            = { default-features = false, git = "https://github.com/new-mvs/substrate.git", branch = "common-library" }
sp-runtime       = { default-features = false, git = "https://github.com/new-mvs/substrate.git", branch = "common-library" }
sp-std           = { default-features = false, git = "https://github.com/new-mvs/substrate.git", branch = "common-library" }

[dev-dependencies]
# crates
hex-literal = "0.3.1"

[features]
default = ["std"]

std = [
	"crates-std",
	"betelgeuse-std",
	"substrate-std",
]

crates-std    = [
	"codec/std",
	"ethereum/std",
	"ethereum-types/std",
	"evm/std",
	"libsecp256k1/std",
	"rlp/std",
	"rustc-hex/std",
	"serde",
	"sha3/std",
]
betelgeuse-std  = [
	"betelgeuse-balances/std",
	"betelgeuse-evm/std",
	"betelgeuse-evm-primitives/std",
	"betelgeuse-support/std",
	"dvm-consensus-primitives/std",
	"dvm-rpc-runtime-api/std",
]
substrate-std = [
	"frame-support/std",
	"frame-system/std",
	"pallet-timestamp/std",
	"sp-core/std",
	"sp-io/std",
	"sp-runtime/std",
	"sp-std/std",
]
