[package]
authors     = ["Betelgeuse Network <hello@betelgeuse.network>"]
description = "FRAME pallet based on seq-Phragmén election method."
edition     = "2018"
homepage    = "https://betelgeuse.network/"
license     = "GPL-3.0"
name        = "betelgeuse-elections-phragmen"
readme      = "README.md"
repository  = "https://github.com/betelgeuse-network/betelgeuse-common/"
version     = "1.3.0"

[dependencies]
# crates
codec = { package = "parity-scale-codec", version = "1.3.5", default-features = false }
serde = { version = "1.0.118", optional = true }
# betelgeuse
betelgeuse-support = { default-features = false, path = "../support" }
# substrate
frame-support     = { default-features = false, git = "https://github.com/new-mvs/substrate.git", branch = "common-library" }
frame-system      = { default-features = false, git = "https://github.com/new-mvs/substrate.git", branch = "common-library" }
sp-npos-elections = { default-features = false, git = "https://github.com/new-mvs/substrate.git", branch = "common-library" }
sp-runtime        = { default-features = false, git = "https://github.com/new-mvs/substrate.git", branch = "common-library" }
sp-std            = { default-features = false, git = "https://github.com/new-mvs/substrate.git", branch = "common-library" }

[dev-dependencies]
# crates
hex-literal = { version = "0.3.1" }
# betelgeuse
betelgeuse-balances = { path = "../balances" }
# substrate
sp-core              = { git = "https://github.com/new-mvs/substrate.git", branch = "common-library" }
sp-io                = { git = "https://github.com/new-mvs/substrate.git", branch = "common-library" }
substrate-test-utils = { git = "https://github.com/new-mvs/substrate.git", branch = "common-library" }

[features]
default = ["std"]

std = [
	"crates-std",
	"betelgeuse-std",
	"substrate-std",
]

crates-std    = [
	"codec/std",
	"serde",
]
betelgeuse-std  = ["betelgeuse-support/std"]
substrate-std = [
	"frame-support/std",
	"frame-system/std",
	"sp-npos-elections/std",
	"sp-runtime/std",
	"sp-std/std",
]
