[package]
authors     = ["Betelgeuse Network <hello@betelgeuse.network>"]
description = "Support code for Betelgeuse runtime"
edition     = "2018"
homepage    = "https://betelgeuse.network/"
license     = "GPL-3.0"
name        = "betelgeuse-support"
readme      = "README.md"
repository  = "https://github.com/betelgeuse-network/betelgeuse-common/"
version     = "1.3.0"

[dependencies]
# crates
codec                 = { package = "parity-scale-codec", version = "1.3.5", default-features = false, features = ["derive"] }
impl-trait-for-tuples = { version = "0.2.0" }
num-traits            = { version = "0.2.14", default-features = false }
# betelgeuse
ethereum-primitives = { default-features = false, path = "../../primitives/ethereum-primitives" }
# substrate
frame-support = { default-features = false, git = "https://github.com/new-mvs/substrate.git", branch = "common-library" }
sp-runtime    = { default-features = false, git = "https://github.com/new-mvs/substrate.git", branch = "common-library" }
sp-std        = { default-features = false, git = "https://github.com/new-mvs/substrate.git", branch = "common-library" }


[features]
default = ["std"]

std = [
	"crates-std",
	"betelgeuse-std",
	"substrate-std",
]

crates-std    = [
	"codec/std",
	"num-traits/std",
]
betelgeuse-std  = ["ethereum-primitives/std"]
substrate-std = [
	"frame-support/std",
	"sp-runtime/std",
	"sp-std/std",
]

easy-testing = []
