[package]
authors     = ["Betelgeuse Network <hello@betelgeuse.network>"]
description = "FRAME pallet for manage vesting"
edition     = "2018"
homepage    = "https://betelgeuse.network/"
license     = "GPL-3.0"
name        = "betelgeuse-vesting"
readme      = "README.md"
repository  = "https://github.com/betelgeuse-network/betelgeuse-common/"
version     = "1.3.0"

[dependencies]
# crates
codec      = { package = "parity-scale-codec", version = "1.3.5", default-features = false, features = ["derive"] }
enumflags2 = { version = "0.6.2" }
serde      = { version = "1.0.118", optional = true }
# substrate
frame-support = { default-features = false, git = "https://github.com/new-mvs/substrate.git", branch = "common-library" }
frame-system  = { default-features = false, git = "https://github.com/new-mvs/substrate.git", branch = "common-library" }
sp-runtime    = { default-features = false, git = "https://github.com/new-mvs/substrate.git", branch = "common-library" }
sp-std        = { default-features = false, git = "https://github.com/new-mvs/substrate.git", branch = "common-library" }
# betelgeuse
betelgeuse-support = { default-features = false, path = "../support" }

[dev-dependencies]
# crates
hex-literal = "0.3.1"
# substrate
sp-core    = { git = "https://github.com/new-mvs/substrate.git", branch = "common-library" }
sp-io      = { git = "https://github.com/new-mvs/substrate.git", branch = "common-library" }
sp-storage = { git = "https://github.com/new-mvs/substrate.git", branch = "common-library" }
# betelgeuse
betelgeuse-balances = { path = "../balances" }

[features]
default = ["std"]

std = [
	"crates-std",
	"betelgeuse-std",
	"substrate-std",
]

crates-std    = [
	"codec/std",
	"serde",
]
betelgeuse-std  = ["betelgeuse-support/std"]
substrate-std = [
	"frame-support/std",
	"frame-system/std",
	"sp-runtime/std",
	"sp-std/std",
]
