[package]
authors     = ["Betelgeuse Network <hello@betelgeuse.network>"]
description = "Minimal array/bytes operation for runtime"
edition     = "2018"
homepage    = "https://betelgeuse.network/"
license     = "GPL-3.0"
name        = "array-bytes"
readme      = "README.md"
repository  = "https://github.com/betelgeuse-network/betelgeuse-common/"
version     = "1.3.0"

[dependencies]
# substrate
sp-std = { default-features = false, git = "https://github.com/new-mvs/substrate.git", branch = "common-library" }

[features]
default = ["std"]

std = ["substrate-std"]

substrate-std = ["sp-std/std"]
