[package]
authors     = ["Betelgeuse Network <hello@betelgeuse.network>"]
description = "Ethereum primitives for Betelgeuse Relay"
edition     = "2018"
homepage    = "https://betelgeuse.network/"
license     = "GPL-3.0"
name        = "ethereum-primitives"
readme      = "README.md"
repository  = "https://github.com/betelgeuse-network/betelgeuse-common/"
version     = "1.3.0"

[dependencies]
# crates
codec  = { package = "parity-scale-codec", version = "1.3.5", default-features = false, features = ["derive"] }
ethash = { default-features = false, git = "https://github.com/darwinia-network/rust-ethash" }
serde  = { version = "1.0.118", optional = true, features = ["derive"] }
# betelgeuse
array-bytes          = { default-features = false, path = "../array-bytes" }
merkle-patricia-trie = { default-features = false, path = "../merkle-patricia-trie" }
# github
ethbloom        = { default-features = false, git = "https://github.com/darwinia-network/parity-common.git" }
ethereum-types  = { default-features = false, git = "https://github.com/darwinia-network/parity-common.git" }
fixed-hash      = { default-features = false, git = "https://github.com/darwinia-network/parity-common.git" }
impl-codec      = { default-features = false, git = "https://github.com/darwinia-network/parity-common.git" }
impl-rlp        = { default-features = false, git = "https://github.com/darwinia-network/parity-common.git" }
keccak-hash     = { default-features = false, git = "https://github.com/darwinia-network/parity-common.git" }
primitive-types = { default-features = false, features = ["codec", "rlp"], git = "https://github.com/darwinia-network/parity-common.git" }
rlp             = { default-features = false, git = "https://github.com/darwinia-network/parity-common.git" }
rlp-derive      = { git = "https://github.com/darwinia-network/parity-common.git" }
# substrate
sp-io      = { default-features = false, git = "https://github.com/new-mvs/substrate.git", branch = "common-library" }
sp-runtime = { default-features = false, git = "https://github.com/new-mvs/substrate.git", branch = "common-library" }
sp-std     = { default-features = false, git = "https://github.com/new-mvs/substrate.git", branch = "common-library" }

[dev-dependencies]
# crates
keccak-hasher = { version = "0.15.3" }
serde_json    = { version = "1.0.61" }
# github
triehash = { git = "https://github.com/darwinia-network/parity-common.git" }
# substrate
frame-support = { git = "https://github.com/new-mvs/substrate.git", branch = "common-library" }

[features]
default = ["std"]

std = [
	"crates-std",
	"github-std",
	"betelgeuse-std",
	"substrate-std",
]

crates-std    = [
	"codec/std",
	"serde",
]
betelgeuse-std  = [
	"array-bytes/std",
	"ethash/std",
	"merkle-patricia-trie/std",
]
github-std    = [
	"ethbloom/std",
	"ethereum-types/std",
	"ethereum-types/serialize",
	"fixed-hash/std",
	"impl-codec/std",
	"impl-rlp/std",
	"keccak-hash/std",
	"primitive-types/std",
	"rlp/std",
]
substrate-std = [
	"sp-io/std",
	"sp-runtime/std",
	"sp-std/std",
]

deserialize  = []
with-new-dag = []
