[package]
authors     = ["Betelgeuse Network <hello@betelgeuse.network>"]
description = "Primitives for Betelgeuse EVM"
edition     = "2018"
homepage    = "https://substrate.dev"
license     = "Apache-2.0"
name        = "betelgeuse-evm-primitives"
readme      = "README.md"
repository  = "https://github.com/betelgeuse-network/betelgeuse-common/"
version     = "1.3.0"

[dependencies]
# crates
codec = { package = "parity-scale-codec", version = "1.3.5", default-features = false }
evm   = { version = "0.19.0", default-features = false, features = ["with-codec"] }
serde = { version = "1.0.118", optional = true, features = ["derive"] }
# substrate
sp-core = { default-features = false, git = "https://github.com/new-mvs/substrate.git", branch = "common-library" }
sp-std  = { default-features = false, git = "https://github.com/new-mvs/substrate.git", branch = "common-library" }

[features]
default = ["std"]

std = [
	"crates-std",
	"substrate-std",
]

crates-std = [
	"codec/std",
	"evm/std",
	"evm/with-serde",
	"serde",
]

substrate-std = [
	"sp-core/std",
	"sp-std/std",
]
