[package]
authors     = ["Betelgeuse Network <hello@betelgeuse.network>"]
description = "Node-specific RPC methods for interaction with staking."
edition     = "2018"
homepage    = "https://betelgeuse.network/"
license     = "GPL-3.0"
name        = "betelgeuse-staking-rpc"
readme      = "README.md"
repository  = "https://github.com/betelgeuse-network/betelgeuse-common/"
version     = "1.3.0"

[dependencies]
# crates
codec               = { package = "parity-scale-codec", version = "1.3.5" }
jsonrpc-core        = { version = "15.1.0" }
jsonrpc-core-client = { version = "15.1.0" }
jsonrpc-derive      = { version = "15.1.0" }
# betelgeuse
betelgeuse-staking-rpc-runtime-api = { path = "./runtime-api" }
# substrate
sp-api        = { git = "https://github.com/new-mvs/substrate.git", branch = "common-library" }
sp-blockchain = { git = "https://github.com/new-mvs/substrate.git", branch = "common-library" }
sp-runtime    = { git = "https://github.com/new-mvs/substrate.git", branch = "common-library" }
