[package]
authors     = ["Betelgeuse Network <hello@betelgeuse.network>"]
description = "FRAME pallet to back Crab assets"
edition     = "2018"
homepage    = "https://betelgeuse.network/"
license     = "GPL-3.0"
name        = "betelgeuse-crab-backing"
readme      = "README.md"
repository  = "https://github.com/betelgeuse-network/betelgeuse-common/"
version     = "1.3.0"

[dependencies]
# crates
codec = { package = "parity-scale-codec", version = "1.3.5", default-features = false }
serde = { version = "1.0.118", optional = true }
# substrate
frame-support = { default-features = false, git = "https://github.com/new-mvs/substrate.git", branch = "common-library" }
frame-system  = { default-features = false, git = "https://github.com/new-mvs/substrate.git", branch = "common-library" }
sp-runtime    = { default-features = false, git = "https://github.com/new-mvs/substrate.git", branch = "common-library" }

[features]
default = ["std"]

std = [
	"crates-std",
	"substrate-std",
]

crates-std    = [
	"codec/std",
	"serde/std",
]
substrate-std = [
	"frame-support/std",
	"frame-system/std",
	"sp-runtime/std",
]
