[package]
authors     = ["Betelgeuse Network <hello@betelgeuse.network>"]
description = "FRAME pallet to back Ethereum assets"
edition     = "2018"
homepage    = "https://betelgeuse.network/"
license     = "GPL-3.0"
name        = "betelgeuse-ethereum-backing"
readme      = "README.md"
repository  = "https://github.com/betelgeuse-network/betelgeuse-common/"
version     = "1.3.0"

[dependencies]
# crates
codec      = { package = "parity-scale-codec", version = "1.3.5", default-features = false, features = ["derive"] }
serde      = { version = "1.0.118", optional = true }
serde_json = { version = "1.0.61", optional = true }
# betelgeuse
array-bytes               = { default-features = false, path = "../../../../primitives/array-bytes" }
betelgeuse-relay-primitives = { default-features = false, path = "../../../../primitives/relay" }
betelgeuse-support          = { default-features = false, path = "../../../support" }
ethereum-primitives       = { default-features = false, path = "../../../../primitives/ethereum-primitives" }
# github
ethabi = { default-features = false, git = "https://github.com/darwinia-network/ethabi.git", branch = "with_no_std" }
# substrate
frame-support = { default-features = false, git = "https://github.com/new-mvs/substrate.git", branch = "common-library" }
frame-system  = { default-features = false, git = "https://github.com/new-mvs/substrate.git", branch = "common-library" }
sp-io         = { default-features = false, git = "https://github.com/new-mvs/substrate.git", branch = "common-library" }
sp-runtime    = { default-features = false, git = "https://github.com/new-mvs/substrate.git", branch = "common-library" }
sp-std        = { default-features = false, git = "https://github.com/new-mvs/substrate.git", branch = "common-library" }

[dev-dependencies]
# betelgeuse
betelgeuse-balances              = { path = "../../../../frame/balances" }
betelgeuse-ethereum-linear-relay = { path = "../linear-relay" }
betelgeuse-ethereum-relay        = { features = ["deserialize"], path = "../relay" }
betelgeuse-relay-primitives      = { path = "../../../../primitives/relay" }
betelgeuse-relayer-game          = { path = "../../relayer-game" }
betelgeuse-staking               = { path = "../../../../frame/staking" }
ethereum-primitives            = { features = ["deserialize"], path = "../../../../primitives/ethereum-primitives" }
# github
rlp = { package = "rlp", git = "https://github.com/darwinia-network/parity-common.git" }
# substrate
pallet-session   = { git = "https://github.com/new-mvs/substrate.git", branch = "common-library" }
pallet-timestamp = { git = "https://github.com/new-mvs/substrate.git", branch = "common-library" }
sp-core          = { git = "https://github.com/new-mvs/substrate.git", branch = "common-library" }
sp-staking       = { git = "https://github.com/new-mvs/substrate.git", branch = "common-library" }

[features]
default = ["std"]

std = [
	"crates-std",
	"betelgeuse-std",
	"github-std",
	"substrate-std",
]

crates-std    = [
	"codec/std",
	"serde",
	"serde_json",
]
betelgeuse-std  = [
	"array-bytes/std",
	"betelgeuse-relay-primitives/std",
	"betelgeuse-support/std",
	"ethereum-primitives/std",
]
github-std    = ["ethabi/std"]
substrate-std = [
	"frame-support/std",
	"frame-system/std",
	"sp-io/std",
	"sp-runtime/std",
	"sp-std/std",
]
