[package]
authors     = ["Betelgeuse Network <hello@betelgeuse.network>"]
description = "FRAME pallet to relay Ethereum header automactically"
edition     = "2018"
homepage    = "https://betelgeuse.network/"
license     = "GPL-3.0"
name        = "betelgeuse-ethereum-offchain"
readme      = "README.md"
repository  = "https://github.com/betelgeuse-network/betelgeuse-common/"
version     = "1.3.0"

[dependencies]
# crates
codec = { package = "parity-scale-codec", version = "1.3.5", default-features = false }
# betelgeuse
array-bytes                    = { default-features = false, path = "../../../../primitives/array-bytes" }
betelgeuse-ethereum-linear-relay = { default-features = false, path = "../linear-relay" }
betelgeuse-support               = { default-features = false, path = "../../../../frame/support" }
ethereum-primitives            = { default-features = false, path = "../../../../primitives/ethereum-primitives" }
# github
rlp = { default-features = false, git = "https://github.com/darwinia-network/parity-common.git" }
# substrate
frame-support = { default-features = false, git = "https://github.com/new-mvs/substrate.git", branch = "common-library" }
frame-system  = { default-features = false, git = "https://github.com/new-mvs/substrate.git", branch = "common-library" }
sp-core       = { default-features = false, git = "https://github.com/new-mvs/substrate.git", branch = "common-library" }
sp-runtime    = { default-features = false, git = "https://github.com/new-mvs/substrate.git", branch = "common-library" }
sp-std        = { default-features = false, git = "https://github.com/new-mvs/substrate.git", branch = "common-library" }

[dev-dependencies]
# crates
serde_json = { version = "1.0.61" }
# betelgeuse
betelgeuse-balances   = { path = "../../../../frame/balances" }
ethereum-primitives = { features = ["deserialize"], path = "../../../../primitives/ethereum-primitives" }
# substrate
sp-core = { git = "https://github.com/new-mvs/substrate.git", branch = "common-library" }
sp-io   = { git = "https://github.com/new-mvs/substrate.git", branch = "common-library" }

[features]
default = ["std"]

std = [
	"crates-std",
	"betelgeuse-std",
	"github-std",
	"substrate-std",
]

crates-std    = ["codec/std"]
betelgeuse-std  = [
	"array-bytes/std",
	"betelgeuse-ethereum-linear-relay/std",
	"betelgeuse-support/std",
	"ethereum-primitives/std",
]
github-std    = ["rlp/std"]
substrate-std = [
	"frame-support/std",
	"frame-system/std",
	"sp-core/std",
	"sp-runtime/std",
	"sp-std/std",
]
