[package]
authors     = ["Betelgeuse Network <hello@betelgeuse.network>"]
description = "Runtime primitives for Ethereum RPC (web3) compatibility layer for Betelgeuse."
edition     = "2018"
homepage    = "https://betelgeuse.network/"
license     = "GPL-3.0"
name        = "dvm-rpc-runtime-api"
readme      = "README.md"
repository  = "https://github.com/betelgeuse-network/betelgeuse-common/"
version     = "1.3.0"

[dependencies]
# crates
codec          = { package = "parity-scale-codec", version = "1.3.5", default-features = false }
ethereum       = { version = "0.5", default-features = false, features = ["with-codec"] }
ethereum-types = { version = "0.9", default-features = false }

# betelgeuse
betelgeuse-evm            = { default-features = false, path = "../../../evm" }
betelgeuse-evm-primitives = { default-features = false, path = "../../../../primitives/evm" }
# substrate
sp-api     = { default-features = false, git = "https://github.com/new-mvs/substrate.git", branch = "common-library" }
sp-core    = { default-features = false, git = "https://github.com/new-mvs/substrate.git", branch = "common-library" }
sp-runtime = { default-features = false, git = "https://github.com/new-mvs/substrate.git", branch = "common-library" }
sp-std     = { default-features = false, git = "https://github.com/new-mvs/substrate.git", branch = "common-library" }

[features]
default = ["std"]

std = [
	"crates-std",
	"betelgeuse-std",
	"substrate-std",
]

betelgeuse-std = [
	"betelgeuse-evm/std",
	"betelgeuse-evm-primitives/std",
]

crates-std = [
	"codec/std",
	"ethereum/std",
	"ethereum-types/std",
]

substrate-std = [
	"sp-api/std",
	"sp-core/std",
	"sp-runtime/std",
	"sp-std/std",
]
