[package]
authors     = ["Betelgeuse Network <hello@betelgeuse.network>"]
description = "Runtime API definition required by header-mmr RPC extensions."
edition     = "2018"
homepage    = "https://betelgeuse.network/"
license     = "GPL-3.0"
name        = "betelgeuse-header-mmr-rpc-runtime-api"
readme      = "README.md"
repository  = "https://github.com/betelgeuse-network/betelgeuse-common/"
version     = "1.3.0"

[dependencies]
# crates
codec = { package = "parity-scale-codec", version = "1.3.5", default-features = false }
serde = { version = "1.0.118", optional = true, features = ["derive"] }
# betelgeuse
betelgeuse-support = { default-features = false, path = "../../../support" }
# substrate
sp-api     = { default-features = false, git = "https://github.com/new-mvs/substrate.git", branch = "common-library" }
sp-runtime = { default-features = false, git = "https://github.com/new-mvs/substrate.git", branch = "common-library" }
sp-std     = { default-features = false, git = "https://github.com/new-mvs/substrate.git", branch = "common-library" }

[features]
default = ["std"]

std = [
	"crates-std",
	"betelgeuse-std",
	"substrate-std",
]

crates-std    = [
	"codec/std",
	"serde",
]
betelgeuse-std  = ["betelgeuse-support/std"]
substrate-std = [
	"sp-api/std",
	"sp-runtime/std",
	"sp-std/std",
]
